--- a/odds.cabal
+++ b/odds.cabal
@@ -16,7 +16,9 @@ library
   hs-source-dirs:      src
   exposed-modules:     Numeric.Probability.OddsList
                      , Numeric.Probability.OddsTree
+  other-modules:       Numeric.Probability.Utils
   build-depends:       base >= 4.7 && < 5
+                     , containers >= 0.5
   default-language:    Haskell2010
   ghc-options:         -Wall -Werror
 
